// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ltiRender 400 BAD REQUEST 1`] = `
{
  "data": {
    "htmlContent": "Bad request. Field lti_version with error: Missing required field.",
  },
  "status": 400,
}
`;

exports[`ltiRender 400 BAD REQUEST wrong values 1`] = `
{
  "data": {
    "htmlContent": "Bad request. Field lti_version with error: Value should be one of LTI-1p0,LTI-2p0.",
  },
  "status": 400,
}
`;

exports[`parseAndValidateParameters errors 1`] = `
{
  "messages": [
    {
      "field": "lti_message_type",
      "message": "Missing required field",
    },
    {
      "field": "lti_version",
      "message": "Missing required field",
    },
  ],
  "valid": false,
}
`;

exports[`parseAndValidateParameters no errors 1`] = `
{
  "ltiData": {
    "launch_presentation_document_target": "iframe",
    "launch_presentation_height": "800",
    "launch_presentation_return_url": "http://ndla-api/some-return-url",
    "launch_presentation_width": "1200",
    "lti_message_type": "basic-lti-launch-request",
    "lti_version": "LTI-1p0",
  },
  "valid": true,
}
`;
